<resources>
    <string name="app_name">Popular Movies</string>

    <!-- TODO PASTE YOUR API KEY HERE (GET IT FROM HERE : https://developers.themoviedb.org/3/getting-started)-->
    <string name="API_KEY">PASTE YOUR API KEY HERE</string>
    <!-- Name of the shared view for transition -->
    <string name="shared_poster_image">Shared poster image</string>

    <string name="movie_placeholder_name">A movieResponse</string>
    <string name="image_placeholder_content_description">Movie Image</string>
    <!-- Main activity Strings -->
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="error_retrieving_data">Error Retrieving data</string>
    <string name="no_favourites">No Favourites</string>
    <string name="popular_movies">Popular movies</string>
    <string name="top_rated_movies">Top Rated Movies</string>
    <string name="favourites">Favourites</string>
    <!-- Details activity Strings -->
    <string name="detail_activity_error_message">Error getting movieResponse data</string>
    <string name="added_to_fav">Added to favourites</string>
    <string name="removed_from_fav">Removed from favourites</string>
    <!-- MovieResponse object attributes -->
    <string name="release_date">Release date</string>
    <string name="synopsis">Synopsis</string>
    <string name="ratings">Ratings</string>
    <string name="overview">Overview</string>
    <string name="movie_cast">Cast</string>
    <string name="movie_reviews">Reviews</string>
    <string name="similar_movies_title">Similar Movies</string>
    <string name="trailers">Trailers</string>
    <string name="back">Back</string>
</resources>
