<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!-- this xml file is used to display movie item -->
    <ImageView
        android:id="@+id/moviePoster_iv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/image_height"
        android:contentDescription="@string/image_placeholder_content_description"
        android:scaleType="centerCrop"
        android:transitionName="@string/shared_poster_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image_place_holder_poster" />

    <TextView
        android:id="@+id/movieName_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_margin_bottom"
        android:layout_marginEnd="@dimen/dimen_margin_end"
        android:layout_marginStart="@dimen/dimen_margin_start"
        android:layout_marginTop="@dimen/dimen_margin_Top"
        android:text="@string/movie_placeholder_name"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moviePoster_iv"
        app:layout_constraintVertical_bias="0.047" />
</android.support.constraint.ConstraintLayout>