<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".ui.detail.DetailsActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!-- Shows movie backdrop , content description set dynamically -->
        <ImageView
            android:id="@+id/backdrop_iv_detail_activity"
            android:layout_width="match_parent"
            android:layout_height="@dimen/backdrop_height"
            android:scaleType="centerCrop"
            android:src="@drawable/image_place_holder_back_drop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Scrim layout for the backdrop -->
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/scrim"
            app:layout_constraintBottom_toBottomOf="@+id/backdrop_iv_detail_activity"
            app:layout_constraintEnd_toEndOf="@+id/backdrop_iv_detail_activity"
            app:layout_constraintStart_toStartOf="@+id/backdrop_iv_detail_activity"
            app:layout_constraintTop_toTopOf="@+id/backdrop_iv_detail_activity" />

        <!-- Custom back button -->
        <ImageView
            android:id="@+id/custom_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_round_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/moviePoster_iv"
            android:layout_width="@dimen/small_poster_width"
            android:layout_height="@dimen/small_poster_height"
            android:layout_marginBottom="@dimen/poster_margin_bottom"
            android:layout_marginStart="@dimen/margin_start_16dp"
            android:contentDescription="@string/image_placeholder_content_description"
            android:fadingEdge="vertical"
            android:fadingEdgeLength="@dimen/image_fading_length"
            android:src="@drawable/image_place_holder_poster"
            android:transitionName="@string/shared_poster_image"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/trailer_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_8dp"
            android:layout_marginEnd="@dimen/margin_8dp"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:contentDescription="@string/trailers"
            android:src="@drawable/play_button"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/backdrop_iv_detail_activity"
            app:layout_constraintEnd_toEndOf="@+id/backdrop_iv_detail_activity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/backdrop_iv_detail_activity" />

        <com.like.LikeButton
            android:id="@+id/like_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon_size="@dimen/icon_size"
            app:icon_type="heart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/movieTitle_tv"
            android:layout_width="@dimen/width_0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_margin_end"
            android:layout_marginStart="@dimen/dimen_margin_start"
            android:layout_marginTop="@dimen/dimen_margin_top_16dp"
            android:text="@string/movie_placeholder_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/colorTextOrange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/moviePoster_iv"
            app:layout_constraintTop_toBottomOf="@+id/backdrop_iv_detail_activity" />

        <TextView
            android:id="@+id/movieReleaseDate_tv"
            android:layout_width="@dimen/width_0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_margin_end"
            android:layout_marginStart="@dimen/dimen_margin_start"
            android:layout_marginTop="@dimen/margin_top_8dp"
            android:text="@string/release_date"
            android:textColor="@color/colorTextBlue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/moviePoster_iv"
            app:layout_constraintTop_toBottomOf="@+id/movieTitle_tv" />

        <TextView
            android:id="@+id/rating_tv"
            android:layout_width="@dimen/width_0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_margin_end"
            android:layout_marginStart="@dimen/dimen_margin_start"
            android:layout_marginTop="@dimen/margin_top_8dp"
            android:text="@string/ratings"
            android:textColor="@color/textColorSecondaryLight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/moviePoster_iv"
            app:layout_constraintTop_toBottomOf="@+id/movieReleaseDate_tv" />

        <TextView
            android:id="@+id/movieSynopsis_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_margin_start_16dp"
            android:layout_marginStart="@dimen/dimen_margin_start_16dp"
            android:text="@string/synopsis"
            android:textColor="@color/textColorSecondaryLight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_overview_title" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="364dp" />

        <TextView
            android:id="@+id/tv_overview_title"
            style="@style/TitleTextView"
            android:layout_marginTop="@dimen/margin_4dp"
            android:text="@string/overview"
            android:textColor="@color/colorTextOrange"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline" />

        <!-- Cast Group will be used to hide entire section when data is null -->
        <android.support.constraint.Group
            android:id="@+id/cast_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="tv_cast_title,rv_cast" />

        <TextView
            android:id="@+id/tv_cast_title"
            style="@style/TitleTextView"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:text="@string/movie_cast"
            android:textColor="@color/colorTextOrange"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movieSynopsis_tv" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_cast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_cast_title" />

        <!-- Trailer Group will be used to hide entire section when data is null -->
        <android.support.constraint.Group
            android:id="@+id/trailer_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="tv_trailers_title,rv_trailers" />

        <TextView
            android:id="@+id/tv_trailers_title"
            style="@style/TitleTextView"
            android:layout_marginStart="@dimen/margin_16dp"
            android:text="@string/trailers"
            android:textColor="@color/colorTextOrange"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_cast" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_trailers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_trailers_title" />

        <!-- Review Group will be used to hide entire section when data is null -->
        <android.support.constraint.Group
            android:id="@+id/review_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="tv_reviews_title,rv_reviews" />

        <TextView
            android:id="@+id/tv_reviews_title"
            style="@style/TitleTextView"
            android:layout_marginStart="@dimen/margin_16dp"
            android:text="@string/movie_reviews"
            android:textColor="@color/colorTextOrange"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_trailers" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_reviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_reviews_title">

        </android.support.v7.widget.RecyclerView>

        <!--Similar movies section-->
        <android.support.v7.widget.CardView
            android:id="@+id/similar_movies_view_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_8dp"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_8dp"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_reviews">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_similar_movies_title"
                    style="@style/TitleTextView"
                    android:layout_marginStart="@dimen/margin_8dp"
                    android:paddingBottom="@dimen/margin_8dp"
                    android:paddingTop="@dimen/margin_8dp"
                    android:text="@string/similar_movies_title"
                    android:textColor="@color/colorTextOrange" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_similar_movies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_8dp">

                </android.support.v7.widget.RecyclerView>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </android.support.constraint.ConstraintLayout>

</ScrollView>