<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".ui.list.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolBar_main_activity"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary"
        app:title="@string/app_name"
        app:titleTextColor="@color/textColorPrimaryLight" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutAnimation="@anim/layout_animation_slide_bottom" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />


        <!-- This layout will be visible when there is error getting data -->
        <TextView
            android:id="@+id/empty_state_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin"
            android:drawablePadding="@dimen/dimen_drawable_padding"
            android:drawableTop="@drawable/broken_link"
            android:text="@string/error_retrieving_data"
            android:textColor="@color/textColorPrimaryLight" />

        <!-- This layout will be visible when there is no internet connection -->
        <TextView
            android:id="@+id/no_internet_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin"
            android:drawablePadding="@dimen/dimen_drawable_padding"
            android:drawableTop="@drawable/no_internet"
            android:text="@string/no_internet_connection"
            android:textColor="@color/textColorPrimaryLight" />

    </FrameLayout>

</LinearLayout>